--- a/lab3/Debug/makefile
+++ b/lab3/Debug/makefile
@@ -52,6 +52,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 lab3.list \
 
+OBJCOPY_HEX += \
+lab3.hex \
+
 
 # All Target
 all: main-build
@@ -75,12 +78,17 @@ lab3.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+lab3.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "lab3.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) default.size.stdout lab3.elf lab3.list lab3.map
+	-$(RM) default.size.stdout lab3.elf lab3.hex lab3.list lab3.map
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
